--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/znb4pv0/Screenshot-20231029-164939.jpg" />
-  <link href='https://i.ibb.co/znb4pv0/Screenshot-20231029-164939.jpg' rel='image_src' />
+  <link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/znb4pv0/Panshina.jpg" />
+  <link href='https://i.ibb.co/znb4pv0/Panshina.jpg' rel='image_src' />
   <meta property="og:title" content="Project Panshina" />
   <title>Project panshina</title>
 
