--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="shortcut icon" type="image/png" href="https://i.ibb.co/Nm8hdwf/logo.png" />
   <link href='https://i.ibb.co/Nm8hdwf/logo.png' rel='image_src' />
   <meta property="og:title" content="Project Panshina" />
-  <title>Project panshina</title>
+  <meta property="og:description" content="Coder:- E_Bot_Raja" />
+  <title>Project Panshina</title>
 
 <style>
 *{
