--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/png" href="https://i.ibb.co/d0Kw1vG/Panshina.png" />
-  <link href='https://i.ibb.co/d0Kw1vG/Panshina.png' rel='image_src' />
+  <link rel="shortcut icon" type="image/png" href="https://i.ibb.co/rthjXDL/panshina.png" />
+  <link rel="image_src" href="https://i.ibb.co/rthjXDL/panshina.png" />
   <meta property="og:title" content="Project Panshina" />
   <meta property="og:description" content="Coder:- E_Bot_Raja" />
   <title>Project Panshina</title>
@@ -43,9 +43,10 @@
 }
 
 img{
-  width: 98vw;
+  width: 95vw;
   height: auto;
-  margin-left: 1vw;
+  margin-left: 2.5vw;
+  border-radius: 9px;
 }
 
 p{
@@ -69,7 +70,7 @@ big{
 
 <div id="box">
 <p><big>માહિતી:-</big> આ નકશામાં તમને જોવા મળશે ગામના દરેક વ્યક્તિના ઘરનું ચોક્ક્સ લોકેશન, જેને તમે આ નકશામાં પુલથી લઈને કોઈના ઘર સુધી અથવા તો તમરા ઘરથી કોઈના ઘર, મંદિર કે દુકાન સુધીનો રસ્તો શોધી શકશો. જેમાં તમને સૌથી નજીકનો રસ્તો તથા એકથી વધારે રસ્તા જોવા મળશે, કોઈ ચોક્કસ સ્થળ સુધી પહોંચવા માટે, અને ગામની દરેક ફળીના નામ પણ જોવા મળશે</p><br>
-<p><big>👉🏼</big> આ નકશામાં તમને ગામનની જુદી જુદી દુકાનોની જેમકે વાળંદની દુકાનો, મેડિકલ સ્ટોર, ફોટો સ્ટુડિયો, મોબાઇલ રીપેરીંગની દુકાન, ચાની દુકાનો, ઠંડા પીણાની દુકાનો, શાકભાજીની દુકાનો, સમોસા-ભજીયાની દુકાન, કરિયાણાની દુકાનો, મંડપ ડેકોરેશન, વેલ્ડિંગની દુકાન, બ્રાહ્મણના ઘર, દૂધની ડેરી, પાવર હાઉસ, કડિયાનું ઘર, સુથારનું ઘર, લુહારનુંઘર ઝેરોકસની દુકાનો, પંચરની દુકાનો, મીઠાઈની દુકાનો, મોટો જનરલ સ્ટોર, ચંપલની દુકાન, કપડાંની દુકાન, કટલેરીની દુકાન, દરજીના ઘર, હોલસેલ માવાની દુકાન, સોનીની દુકાન, દવાખાનું, પ્રાઇવેટ ડોક્ટરના ઘર, બેંક, પોલીસ સ્ટેશન, બસ સ્ટેશન, પોસ્ટ ઓફિસ, પ્રાથમિક શાળાઓ, હાઈસ્કૂલો, પેટ્રોલપંપ, અને સુંદર સ્મશાન, મંદિરો તથા સરપંચના ઘરનું લોકેશન, રાશન કાર્ડની દુકાનો, શિવ શક્તિ અગ્રો, ખુંભારનું ઘર, ટ્યુશન, બાલમંદિર ખાતરની દુકાન, ખોળની દુકાન, વગેરેને નકશામાં સરળતાથી શોધી શકાશે.</p>
+<p><big>👉🏼</big> આ નકશામાં તમને ગામનની જુદી જુદી દુકાનોની જેમકે વાળંદની દુકાનો, મેડિકલ સ્ટોર, ફોટો સ્ટુડિયો, મોબાઇલ રીપેરીંગની દુકાન, ચાની દુકાનો, ઠંડા પીણાની દુકાનો, શાકભાજીની દુકાનો, સમોસા-ભજીયાની દુકાન, કરિયાણાની દુકાનો, મંડપ ડેકોરેશન, વેલ્ડિંગની દુકાન, બ્રાહ્મણના ઘર, દૂધની ડેરી, પાવર હાઉસ, કડિયાનું ઘર, સુથારનું ઘર, લુહારનુંઘર ઝેરોકસની દુકાનો, પંચરની દુકાનો, મીઠાઈની દુકાનો, મોટો જનરલ સ્ટોર, બુટ-ચંપલની દુકાન, કપડાંની દુકાન, કટલેરીની દુકાન, દરજીના ઘર, હોલસેલ માવાની દુકાન, સોનીની દુકાન, દવાખાનું, પ્રાઇવેટ ડોક્ટરના ઘર, બેંક, પોલીસ સ્ટેશન, બસ સ્ટેશન, પોસ્ટ ઓફિસ, પ્રાથમિક શાળાઓ, હાઈસ્કૂલો, પેટ્રોલપંપ, અને સુંદર સ્મશાન, મંદિરો તથા સરપંચના ઘરનું લોકેશન, રાશન કાર્ડની દુકાનો, શિવ શક્તિ અગ્રો, ખુંભારનું ઘર, ટ્યુશન, બાલમંદિર ખાતરની દુકાન, ખોળની દુકાન, વગેરેને નકશામાં સરળતાથી શોધી શકાશે.</p>
 </div><br>
 </body>
 </html>
