--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/png" href="https://i.ibb.co/rthjXDL/panshina.png" />
-  <link rel="image_src" href="https://i.ibb.co/rthjXDL/panshina.png" />
+  <link rel="shortcut icon" type="image/png" href="https://i.ibb.co/Pj7GPDd/panshina.png />
+  <link rel="image_src" href="https://i.ibb.co/Pj7GPDd/panshina.png" />
   <meta property="og:title" content="Project Panshina" />
   <meta property="og:description" content="Coder:- E_Bot_Raja" />
   <title>Project Panshina</title>
