--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="https://i.ibb.co/Nm8hdwf/logo.png" />
-  <link href="https://i.ibb.co/Nm8hdwf/logo.png" rel="image_src" />
-  <meta property="og:title" content="Project Panshina" />
-  <meta property="og:description" content="Coder:- E_Bot_Raja" />
+  <link href='https://i.ibb.co/Nm8hdwf/logo.png' rel='image_src' />
+  <meta property="og:title" content="ITI App Store" />
+  <meta property="og:description" content="An application that works without internet, is available for free and is ad-free" />
   <title>Project Panshina</title>
 
 <style>
