--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/fHnrwNj/IMG-20231102-104000.jpg" />
-  <link href='https://i.ibb.co/fHnrwNj/IMG-20231102-104000.jpg' rel='image_src' />
-  <meta property="og:title" content="ITI App Store" />
-  <meta property="og:description" content="An application that works without internet, is available for free and is ad-free" />
+  <link rel="shortcut icon" type="image/png" href="https://i.ibb.co/C68QX91/p.png" />
+  <link href='https://i.ibb.co/C68QX91/p.png' rel='image_src' />
+  <meta property="og:title" content="Project Panshina" />
+  <meta property="og:description" content="Coder:- E_Bot_Raja" />
   <title>Project Panshina</title>
 
 <style>
