--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgaVV6IHpu80LC3b1IrZKyHYMRtziL4cOYhVmgpnvDOuhowD6eRvQl1yC9uXvI84AjscTuaJi7Bdh0JbaJe44quSWc3W23DUYN59e6RNA3c-nnT68OgL3ijXlvI_GU6IvhO_o7P3VQXnLDQFLDNPUSKXquFtWqupZS1FEJrpXUg82hDG3z7NT91p7CY-y3F/w1200-h630-p-k-no-nu/p.png" />
   <link href='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgaVV6IHpu80LC3b1IrZKyHYMRtziL4cOYhVmgpnvDOuhowD6eRvQl1yC9uXvI84AjscTuaJi7Bdh0JbaJe44quSWc3W23DUYN59e6RNA3c-nnT68OgL3ijXlvI_GU6IvhO_o7P3VQXnLDQFLDNPUSKXquFtWqupZS1FEJrpXUg82hDG3z7NT91p7CY-y3F/w1200-h630-p-k-no-nu/p.png' rel='image_src' />
   <meta property="og:title" content="Project Panshina" />
-  <meta property="og:description" content="Coder:- E_Bot_Raja Supporter:- Kalpana" />
+  <meta property="og:description" content="Coder:- E_Bot_Raja & I would like to dedicate this project to Kalpana" />
   <title>Project Panshina</title>
 
 <style>
